--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body> 
     <header> 
         <nav class="navbar navbar-expand-lg navbar-dark">
-            <div class="container">
+            <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
                     <img src="images/logo.png" class="img-fluid" alt="Logo">
                 </a>
@@ -50,8 +50,12 @@
 
     <main>
         <article>
-            
-            
+            <div class="accept-wrapper">
+                <div class="container-fluid">
+                    <h1>Accept Bill Payments Online and In-store</h1>
+                    <p>Get funds to expand your business quickly without collateral. Apply today and receive funds in your account within 48 hours once approved.</p>
+                </div>
+            </div>
         </article>
     </main>
 
