--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                 <div class="container-fluid">
                     <h1>Accept Bill Payments Online and In-store</h1>
                     <p>Get funds to expand your business quickly without collateral. Apply today and receive funds in your account within 48 hours once approved.</p>
+                    <a class="btn btn-info btn-apply"><img src="images/icon.svg" class="img-fluid" alt=""> Apply Now</a>
                 </div>
             </div>
         </article>
